--- a/.github/workflows/139-325-ubuntu-gloss-single-blocks-127-141.yml
+++ b/.github/workflows/139-325-ubuntu-gloss-single-blocks-127-141.yml
@@ -1,7 +1,7 @@
-name: 139-310 Ubuntu gloss single blocks 112-126
+name: 139-325 Ubuntu gloss single blocks 127-141
 
 on:
-  workflow_dispatch:
+  pull_request:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -11,15 +11,15 @@ permissions:
   contents: read
 
 jobs:
-  block-112:
-    name: 139-310 Ubuntu gloss block 112
+  block-127:
+    name: 139-325 Ubuntu gloss block 127
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 112 and run banish
+      - name: Load block 127 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -41,9 +41,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-112.sh"
+            block="$gloss_dir/block-127.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 112" >&2
+              printf "%s\n" "[gloss-test] missing block 127" >&2
               exit 1
             fi
             . "$block"
@@ -57,15 +57,15 @@ jobs:
           fi
           exit "$status"
 
-  block-113:
-    name: 139-311 Ubuntu gloss block 113
+  block-128:
+    name: 139-326 Ubuntu gloss block 128
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 113 and run banish
+      - name: Load block 128 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -87,9 +87,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-113.sh"
+            block="$gloss_dir/block-128.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 113" >&2
+              printf "%s\n" "[gloss-test] missing block 128" >&2
               exit 1
             fi
             . "$block"
@@ -103,15 +103,15 @@ jobs:
           fi
           exit "$status"
 
-  block-114:
-    name: 139-312 Ubuntu gloss block 114
+  block-129:
+    name: 139-327 Ubuntu gloss block 129
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 114 and run banish
+      - name: Load block 129 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -133,9 +133,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-114.sh"
+            block="$gloss_dir/block-129.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 114" >&2
+              printf "%s\n" "[gloss-test] missing block 129" >&2
               exit 1
             fi
             . "$block"
@@ -149,15 +149,15 @@ jobs:
           fi
           exit "$status"
 
-  block-115:
-    name: 139-313 Ubuntu gloss block 115
+  block-130:
+    name: 139-328 Ubuntu gloss block 130
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 115 and run banish
+      - name: Load block 130 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -179,9 +179,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-115.sh"
+            block="$gloss_dir/block-130.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 115" >&2
+              printf "%s\n" "[gloss-test] missing block 130" >&2
               exit 1
             fi
             . "$block"
@@ -195,15 +195,15 @@ jobs:
           fi
           exit "$status"
 
-  block-116:
-    name: 139-314 Ubuntu gloss block 116
+  block-131:
+    name: 139-329 Ubuntu gloss block 131
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 116 and run banish
+      - name: Load block 131 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -225,9 +225,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-116.sh"
+            block="$gloss_dir/block-131.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 116" >&2
+              printf "%s\n" "[gloss-test] missing block 131" >&2
               exit 1
             fi
             . "$block"
@@ -241,15 +241,15 @@ jobs:
           fi
           exit "$status"
 
-  block-117:
-    name: 139-315 Ubuntu gloss block 117
+  block-132:
+    name: 139-330 Ubuntu gloss block 132
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 117 and run banish
+      - name: Load block 132 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -271,9 +271,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-117.sh"
+            block="$gloss_dir/block-132.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 117" >&2
+              printf "%s\n" "[gloss-test] missing block 132" >&2
               exit 1
             fi
             . "$block"
@@ -287,15 +287,15 @@ jobs:
           fi
           exit "$status"
 
-  block-118:
-    name: 139-316 Ubuntu gloss block 118
+  block-133:
+    name: 139-331 Ubuntu gloss block 133
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 118 and run banish
+      - name: Load block 133 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -317,9 +317,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-118.sh"
+            block="$gloss_dir/block-133.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 118" >&2
+              printf "%s\n" "[gloss-test] missing block 133" >&2
               exit 1
             fi
             . "$block"
@@ -333,15 +333,15 @@ jobs:
           fi
           exit "$status"
 
-  block-119:
-    name: 139-317 Ubuntu gloss block 119
+  block-134:
+    name: 139-332 Ubuntu gloss block 134
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 119 and run banish
+      - name: Load block 134 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -363,9 +363,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-119.sh"
+            block="$gloss_dir/block-134.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 119" >&2
+              printf "%s\n" "[gloss-test] missing block 134" >&2
               exit 1
             fi
             . "$block"
@@ -379,15 +379,15 @@ jobs:
           fi
           exit "$status"
 
-  block-120:
-    name: 139-318 Ubuntu gloss block 120
+  block-135:
+    name: 139-333 Ubuntu gloss block 135
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 120 and run banish
+      - name: Load block 135 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -409,9 +409,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-120.sh"
+            block="$gloss_dir/block-135.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 120" >&2
+              printf "%s\n" "[gloss-test] missing block 135" >&2
               exit 1
             fi
             . "$block"
@@ -425,15 +425,15 @@ jobs:
           fi
           exit "$status"
 
-  block-121:
-    name: 139-319 Ubuntu gloss block 121
+  block-136:
+    name: 139-334 Ubuntu gloss block 136
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 121 and run banish
+      - name: Load block 136 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -455,9 +455,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-121.sh"
+            block="$gloss_dir/block-136.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 121" >&2
+              printf "%s\n" "[gloss-test] missing block 136" >&2
               exit 1
             fi
             . "$block"
@@ -471,15 +471,15 @@ jobs:
           fi
           exit "$status"
 
-  block-122:
-    name: 139-320 Ubuntu gloss block 122
+  block-137:
+    name: 139-335 Ubuntu gloss block 137
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 122 and run banish
+      - name: Load block 137 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -501,9 +501,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-122.sh"
+            block="$gloss_dir/block-137.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 122" >&2
+              printf "%s\n" "[gloss-test] missing block 137" >&2
               exit 1
             fi
             . "$block"
@@ -517,15 +517,15 @@ jobs:
           fi
           exit "$status"
 
-  block-123:
-    name: 139-321 Ubuntu gloss block 123
+  block-138:
+    name: 139-336 Ubuntu gloss block 138
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 123 and run banish
+      - name: Load block 138 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -547,9 +547,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-123.sh"
+            block="$gloss_dir/block-138.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 123" >&2
+              printf "%s\n" "[gloss-test] missing block 138" >&2
               exit 1
             fi
             . "$block"
@@ -563,15 +563,15 @@ jobs:
           fi
           exit "$status"
 
-  block-124:
-    name: 139-322 Ubuntu gloss block 124
+  block-139:
+    name: 139-337 Ubuntu gloss block 139
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 124 and run banish
+      - name: Load block 139 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -593,9 +593,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-124.sh"
+            block="$gloss_dir/block-139.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 124" >&2
+              printf "%s\n" "[gloss-test] missing block 139" >&2
               exit 1
             fi
             . "$block"
@@ -609,15 +609,15 @@ jobs:
           fi
           exit "$status"
 
-  block-125:
-    name: 139-323 Ubuntu gloss block 125
+  block-140:
+    name: 139-338 Ubuntu gloss block 140
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 125 and run banish
+      - name: Load block 140 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -639,9 +639,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-125.sh"
+            block="$gloss_dir/block-140.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 125" >&2
+              printf "%s\n" "[gloss-test] missing block 140" >&2
               exit 1
             fi
             . "$block"
@@ -655,15 +655,15 @@ jobs:
           fi
           exit "$status"
 
-  block-126:
-    name: 139-324 Ubuntu gloss block 126
+  block-141:
+    name: 139-339 Ubuntu gloss block 141
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install xattr tooling
         run: sudo apt-get update && sudo apt-get install -y attr
-      - name: Load block 126 and run banish
+      - name: Load block 141 and run banish
         run: |
           set +e
           ulimit -c unlimited || true
@@ -685,9 +685,9 @@ jobs:
               'END { printf "%d\n", idx > outdir "/count" }')
             awk -v outdir="$gloss_dir" "$awk_program" "$gloss_file"
 
-            block="$gloss_dir/block-126.sh"
+            block="$gloss_dir/block-141.sh"
             if [ ! -s "$block" ]; then
-              printf "%s\n" "[gloss-test] missing block 126" >&2
+              printf "%s\n" "[gloss-test] missing block 141" >&2
               exit 1
             fi
             . "$block"
