--- a/.github/workflows/collect-failures.yml
+++ b/.github/workflows/collect-failures.yml
@@ -69,7 +69,7 @@ jobs:
 
           # Workflows to monitor
           workflows=(
-            "139-367 Ubuntu gloss block 36 diagnose"
+            "139-368 Ubuntu banish gloss focus"
           )
           
           # Total number of workflows we're monitoring
