--- a/.github/workflows/collect-failures.yml
+++ b/.github/workflows/collect-failures.yml
@@ -69,7 +69,7 @@ jobs:
 
           # Workflows to monitor
           workflows=(
-            "139-368 Ubuntu banish gloss focus"
+            "139-369 Ubuntu banish gloss blacklist"
           )
           
           # Total number of workflows we're monitoring
